--- a/zabbix_agentd.conf
+++ b/zabbix_agentd.conf
@@ -134,7 +134,7 @@ ServerActive=10.0.0.22:10051
 # Default:
 # Hostname=
 
-Hostname=Zabbix server
+#Hostname=Zabbix server
 
 ### Option: HostnameItem
 #	Item used for generating Hostname if it is undefined. Ignored if Hostname is defined.
@@ -142,7 +142,7 @@ Hostname=Zabbix server
 #
 # Mandatory: no
 # Default:
-# HostnameItem=system.hostname
+HostnameItem=system.hostname
 
 ### Option: HostMetadata
 #	Optional parameter that defines host metadata.
